--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -1,42 +1,2 @@
-// 1. Import the initial variables
-@import "../sass/utilities/initial-variables.sass";
-@import "../sass/utilities/functions.sass";
-
-// 2. Set your own initial variables
-// Update blue
-$blue: #b439a4;
-// Add pink and its invert
-$pink: #ffb3b3;
-$black: #c51c1c;
-$pink-invert: #fff;
-// Add a serif family
-$family-serif: "Merriweather", "Georgia", serif;
-
-// 3. Set the derived variables
-// Use the new pink as the primary color
-$primary: $pink;
-$primary-invert: $pink-invert;
-// Use the existing orange as the danger color
-$danger: $orange;
-// Use the new serif family
-$family-primary: $family-serif;
-
-// 4. Setup your Custom Colors
-$linkedin: #0077b5;
-$linkedin-invert: findColorInvert($linkedin);
-$twitter: #55acee;
-$twitter-invert: findColorInvert($twitter);
-$github: #333;
-$github-invert: findColorInvert($github);
-
-// 5. Add new color variables to the color map.
-@import "../sass/utilities/derived-variables";
-$addColors: (
-  "twitter":($twitter, $twitter-invert),
-  "linkedin": ($linkedin, $linkedin-invert),
-  "github": ($github, $github-invert)
-);
-$colors: map-merge($colors, $addColors);
-
-// 6. Import the rest of Bulma
+@charset "utf-8";
 @import "../bulma.sass";
